--- a/go-plugin/Makefile
+++ b/go-plugin/Makefile
@@ -11,7 +11,7 @@ CODEC_OUTPUT	= ${CODEC_PREFIX}-${OUTPUT}
 TRANSCODER_PREFIX = transcoder
 TRANSCODER_OUTPUT = ${TRANSCODER_PREFIX}-${OUTPUT}
 
-STEAM_FILTER_PREFIX = streamfilter
+STEAM_FILTER_PREFIX = filter
 
 SIDECAR_PROJECT_NAME 	= mosn.io/mosn
 PROJECT_NAME			= github.com/mosn/extensions/go-plugin
@@ -48,10 +48,10 @@ transcoder:
 	-w /go/src/${PROJECT_NAME} ${BUILD_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/compile-transcoder.sh
 
-filter: # alias for streamfilter (more short)
-	make streamfilter
+filter: # alias for stream-filter (more short)
+	make stream-filter
 
-streamfilter:
+stream-filter:
 	docker run --rm \
 	-e PLUGIN_STREAM_FILTER=${TARGET} \
 	-e PLUGIN_STEAM_FILTER_PREFIX=${STEAM_FILTER_PREFIX} \
@@ -83,16 +83,16 @@ compile-transcoder:
 	@cd build/transcoders/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_TRANSCODER_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_TRANSCODER_PREFIX}-${PLUGIN_TARGET}.md5
 	cp configs/transcoders/${PLUGIN_TARGET}/*.json build/transcoders/${PLUGIN_TARGET}
 
-compile-streamfilter:
-	@rm -rf build/streamfilters/${PLUGIN_TARGET}
+compile-stream-filter:
+	@rm -rf build/stream_filters/${PLUGIN_TARGET}
 	GO111MODULE=on go build \
 		--buildmode=plugin -mod=mod \
 		-gcflags "all=-N -l" \
-		-o ${PLUGIN_STEAM_FILTER_OUTPUT} ${PLUGIN_PROJECT_NAME}/plugins/streamfilters/${PLUGIN_TARGET}/main
-	mkdir -p build/streamfilters/${PLUGIN_TARGET}
-	mv ${PLUGIN_STEAM_FILTER_OUTPUT} build/streamfilters/${PLUGIN_TARGET}
-	@cd build/streamfilters/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_STEAM_FILTER_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_STEAM_FILTER_PREFIX}-${PLUGIN_TARGET}.md5
-	cp configs/streamfilters/${PLUGIN_TARGET}/*.json build/streamfilters/${PLUGIN_TARGET}
+		-o ${PLUGIN_STEAM_FILTER_OUTPUT} ${PLUGIN_PROJECT_NAME}/plugins/stream_filters/${PLUGIN_TARGET}/main
+	mkdir -p build/stream_filters/${PLUGIN_TARGET}
+	mv ${PLUGIN_STEAM_FILTER_OUTPUT} build/stream_filters/${PLUGIN_TARGET}
+	@cd build/stream_filters/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_STEAM_FILTER_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_STEAM_FILTER_PREFIX}-${PLUGIN_TARGET}.md5
+	cp configs/stream_filters/${PLUGIN_TARGET}/*.json build/stream_filters/${PLUGIN_TARGET}
 
 
 sidecar:
@@ -103,7 +103,7 @@ sidecar:
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
 	-v $(shell go env GOPATH)/src/${SIDECAR_PROJECT_NAME}:/go/src/${SIDECAR_PROJECT_NAME} \
 	-w /go/src/${SIDECAR_PROJECT_NAME} ${BUILD_IMAGE} \
-	sh /go/src/${PROJECT_NAME}/etc/script/compile.sh
+	bash /go/src/${PROJECT_NAME}/etc/script/compile.sh
 
 
 ant:
@@ -114,9 +114,9 @@ ant:
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
 	-v $(shell go env GOPATH)/src/${SIDECAR_GITLAB_PROJECT_NAME}:/go/src/${SIDECAR_GITLAB_PROJECT_NAME} \
 	-w /go/src/${SIDECAR_GITLAB_PROJECT_NAME} -it ${BUILD_IMAGE} \
-	sh /go/src/${PROJECT_NAME}/etc/script/compile.sh
+	bash /go/src/${PROJECT_NAME}/etc/script/compile.sh
 
 clean:
-	@rm -rf build/codecs build/streamfilters build/transcoders
+	@rm -rf build/codecs build/stream_filters build/transcoders
 
 .PHONY: codec clean
