modify xr2sp dubbo

--- a/go-plugin/configs/transcoders/xr2sp/egress_config.json
+++ b/go-plugin/configs/transcoders/xr2sp/egress_config.json
@@ -5,9 +5,12 @@
     "src_protocol": "xr",
     "dst_protocol": "sp"
   },
+  "macther_config":{
+    "matcher_type" :"simpleMatcher"
+  },
   "rule_info": {
     "upstream_sub_protocol": "sp",
-    "upstream_protocol": "HTTP1",
+    "upstream_protocol": "Http1",
     "description": "xr -> spring cloud"
   },
   "config": {
