--- a/go-plugin/configs/transcoders/dubbo2sp/egress_config.json
+++ b/go-plugin/configs/transcoders/dubbo2sp/egress_config.json
@@ -5,6 +5,9 @@
     "src_protocol": "dubbo",
     "dst_protocol": "sp"
   },
+  "macther_config":{
+    "matcher_type" :"simpleMatcher"
+  },
   "rule_info": {
     "upstream_sub_protocol": "sp",
     "upstream_protocol": "HTTP1",
