--- a/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
+++ b/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
@@ -2,7 +2,7 @@
   "type": "sp2dubbo",
   "go_plugin_config": {
     "so_path": "./transcoder-sp2dubbo.so",
-    "src_protocol": "Http1",
+    "src_protocol": "sp",
     "dst_protocol": "dubbo"
   },
   "macther_config":{
@@ -11,7 +11,13 @@
   "rule_info": {
     "upstream_sub_protocol": "dubbo",
     "upstream_protocol": "X",
-    "description": "spring cloud -> dubbo"
+    "description": "spring cloud -> dubbo",
+    "config": {
+      "reservation-client./reservations/echo.POST": {
+        "method": "echo",
+        "service": "com.alipay.sofa.ms.service.EchoService"
+      }
+    }
   },
   "config": {
     "User": "admin"
