--- a/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
+++ b/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
@@ -13,9 +13,17 @@
     "upstream_protocol": "X",
     "description": "spring cloud -> dubbo",
     "config": {
-      "reservation-client./reservations/echo.POST": {
+      "reservation-client./reservations/echo.GET": {
         "method": "echo",
-        "service": "com.alipay.sofa.ms.service.EchoService"
+        "service": "com.alipay.sofa.ms.service.EchoService",
+        "query": [
+          {"type": "java.lang.String", "key": "message"}
+        ]
+      },
+      "reservation-client./reservations/sub.POST": {
+        "method": "sub",
+        "service": "com.alipay.sofa.ms.service.EchoService",
+        "body": {"type": "com.alipay.sofa.ms.service.model.SubReq"}
       }
     }
   },
