--- a/go-plugin/configs/transcoders/dubbo2sp/egress_config.json
+++ b/go-plugin/configs/transcoders/dubbo2sp/egress_config.json
@@ -9,8 +9,7 @@
     "matcher_type" :"simpleMatcher"
   },
   "rule_info": {
-    "upstream_sub_protocol": "sp",
-    "upstream_protocol": "Http1",
+    "upstream_protocol": "sp",
     "description": "dubbo -> spring cloud",
     "config": {
       "com.alipay.sofa.ms.service.EchoService.echo": {
