--- a/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
+++ b/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
@@ -9,8 +9,7 @@
     "matcher_type" :"simpleMatcher"
   },
   "rule_info": {
-    "upstream_sub_protocol": "dubbo",
-    "upstream_protocol": "X",
+    "upstream_protocol": "dubbo",
     "description": "spring cloud -> dubbo",
     "config": {
       "reservation-client./reservations/echo.GET": {
