--- a/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
+++ b/go-plugin/configs/transcoders/sp2dubbo/egress_config.json
@@ -5,7 +5,7 @@
     "src_protocol": "sp",
     "dst_protocol": "dubbo"
   },
-  "macther_config":{
+  "matcher_config":{
     "matcher_type" :"simpleMatcher"
   },
   "rule_info": {
