--- a/go-plugin/configs/codecs/bolt/mosn_config.json
+++ b/go-plugin/configs/codecs/bolt/mosn_config.json
@@ -130,7 +130,7 @@
       {
         "enable": true,
         "type": "go-plugin",
-        "path": "/go/src/github.com/mosn/extensions/go-plugin/build/codecs/xr/codec-bolt.so",
+        "path": "/go/src/mosn.io/extensions/go-plugin/build/codecs/xr/codec-bolt.so",
         "loader_func_name": "LoadCodec"
       }
     ]
