--- a/go-plugin/configs/codecs/bolt/mosn_config.json
+++ b/go-plugin/configs/codecs/bolt/mosn_config.json
@@ -5,7 +5,7 @@
       "default_log_path": "/home/admin/logs/mosn/default.log",
       "listeners": [
         {
-          "name": "egress_xr",
+          "name": "egress_sofa_bolt",
           "address": "0.0.0.0:2045",
           "bind_port": true,
           "filter_chains": [
@@ -18,7 +18,7 @@
                     "upstream_protocol": "X",
                     "router_config_name": "client_router",
                     "extend_config": {
-                      "sub_protocol": "xr"
+                      "sub_protocol": "bolt"
                     }
                   }
                 }
@@ -27,7 +27,7 @@
           ]
         },
         {
-          "name": "ingress_xr",
+          "name": "ingress_sofa_bolt",
           "address": "0.0.0.0:2046",
           "bind_port": true,
           "filter_chains": [
@@ -39,7 +39,7 @@
                     "downstream_protocol": "X",
                     "upstream_protocol": "X",
                     "extend_config": {
-                      "sub_protocol": "xr"
+                      "sub_protocol": "bolt"
                     },
                     "router_config_name": "server_router"
                   }
@@ -111,7 +111,7 @@
         "conn_buffer_limit_bytes": 32768,
         "hosts": [
           {
-            "address": "30.230.19.251:9999"
+            "address": "30.230.19.251:12199"
           }
         ]
       }
@@ -130,7 +130,7 @@
       {
         "enable": true,
         "type": "go-plugin",
-        "path": "/go/src/mosn.io/extensions/go-plugin/build/codecs/xr/codec-xr.so",
+        "path": "/go/src/mosn.io/extensions/go-plugin/build/codecs/xr/codec-bolt.so",
         "loader_func_name": "LoadCodec"
       }
     ]
