--- a/go-plugin/Makefile
+++ b/go-plugin/Makefile
@@ -27,6 +27,7 @@ BASE_IMAGE				= zonghaishang/delve:1.6.1
 
 codec:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_TARGET=${TARGET} \
 	-e PLUGIN_CODEC_OUTPUT=${CODEC_OUTPUT} \
 	-e PLUGIN_CODEC_PREFIX=${CODEC_PREFIX} \
@@ -42,6 +43,7 @@ trans: # alias for transcoder (more short)
 
 transcoder:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_TRANSCODER=${TARGET} \
 	-e PLUGIN_TRANSCODER_PREFIX=${TRANSCODER_PREFIX} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
@@ -54,6 +56,7 @@ filter: # alias for stream-filter (more short)
 
 stream-filter:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_STREAM_FILTER=${TARGET} \
 	-e PLUGIN_STEAM_FILTER_PREFIX=${STEAM_FILTER_PREFIX} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
@@ -97,6 +100,7 @@ compile-stream-filter:
 
 pkg-codec:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_CODEC=${TARGET} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
@@ -105,6 +109,7 @@ pkg-codec:
 
 pkg-filter:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_STREAM_FILTER=${TARGET} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
@@ -122,6 +127,7 @@ pkg-trans:
 sidecar:
 	bash $(shell go env GOPATH)/src/${PROJECT_NAME}/etc/script/stop.sh
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	--env PROJECT_NAME=${PROJECT_NAME} \
 	--env SIDECAR_PROJECT_NAME=${SIDECAR_PROJECT_NAME} \
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
@@ -132,6 +138,7 @@ sidecar:
 ant:
 	bash $(shell go env GOPATH)/src/${PROJECT_NAME}/etc/ant/stop.sh
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	--env PROJECT_NAME=${PROJECT_NAME} \
 	--env SIDECAR_PROJECT_NAME=${SIDECAR_GITLAB_PROJECT_NAME} \
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
@@ -141,6 +148,7 @@ ant:
 
 pkg-ant:
 	docker run --rm \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
 	-v $(shell pwd):/go/src/${PROJECT_NAME} \
 	-w /go/src/${PROJECT_NAME} ${BASE_IMAGE} \
