--- a/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
+++ b/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
@@ -19,7 +19,7 @@
                         "details": [
                             {
                                 "unique_id": "echo",
-                                "path": "/cd2springcloud/hello",
+                                "path": "/xr2springcloud/echo",
                                 "method": "GET",
                                 "target_app": "http.server"
                             }
